# life-manager

./: .env  .env-dev  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
api/: 529f77100e48_initial.py  Dockerfile  alembic.ini  config.py  drop_db.py  manage.py  requirements.txt  wsgi.py
api/migrations/: env.py
api/migrations/versions/: c5723aa738c3_initial.py  f9ef44d1027d_initial.py
api/rest/: app.py  uvicorn_app.py
api/rest/extensions/: __init__.py  base_sqlalchemy.py  config_settings.py
api/rest/factories/: __init__.py  base_factory.py  tag_factory.py  timer_factory.py
api/rest/models/: __init__.py  tag.py  timer.py
api/rest/schemas/: __init__.py  base_schema.py  tag.py  timer.py
api/rest/utils/helpers/: base_update.py
api/rest/utils/helpers/tag/: tag_update.py
api/rest/utils/helpers/timer/: timer_update.py
api/rest/views/: tag.py  timer.py
api/tests/: conftest.py
api/tests/test_api/test_rest/test_views/: test_tag.py  test_timer.py
