[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py37"]
color = true

include = '\.pyi?$'
exclude = '''
^/(migrations)/
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docker
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true
ensure_newline_before_comments = true
line_length = 121
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
profile = "black"

[tool.poetry]
name = "life manager"
version = "0.1.0"
description = ""
authors = ["dmikhalchenko"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.api.dependencies]
fastapi = "^0.115.4"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pycodestyle = "^2.12.1"
pyflakes = "^3.2.0"
black = "^24.10.0"
add-trailing-comma = "^3.1.0"
pre-commit = "^4.0.1"
